提交网络通讯框架搭建

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,2 @@
 all : 
-	gcc -g config.c -I../3rd/lua/ -L../3rd/lua -llua -lm -ldl
+	gcc -g config.c -o config -Wall -I../include -I../3rd/lua/ -L../3rd/lua -llua -lm -ldl
