提交gamed和gated能运行版本

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,6 @@
 MAX_ONLINE = 100
-IP = "192.168.12.7"
-PORT = 2540 
+GATED_IP = "127.0.0.1"
+OUTER_IP = "192.168.12.6"
+OUTER_GATED_PORT = 2544 
+INTER_GATED_PORT = 2540 
 HARBORID = 12345
